# polar-semeval-slurm

./: .gitignore  README.md  Slurm4Polar.sh  Trial_Data.csv  df_predictions.jsonl  main.py  pyproject.toml  requirements.txt  sanity_test_gpu.py  wrong.csv
