[project]
name = "semevalpolar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.1",
    "datasets>=4.3.0",
    "dspy>=3.0.3",
    "evaluate>=0.4.6",
    "google-genai>=1.38.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.6",
    "nbformat>=5.10.4",
    "notebook>=7.4.5",
    "numpy>=2.3.2",
    "ollama>=0.6.1",
    "pandas>=2.3.2",
    "pandas-stubs~=2.3.2",
    "peft>=0.18.1",
    "ruff>=0.15.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.1",
    "tenacity>=9.1.2",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "trl>=0.26.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
